--- a/package.json
+++ b/package.json
@@ -46,3 +46,19 @@
     "fast-deep-equal": "^2.0.1"
   }
 }
+"language" :  "ar" ٫
+"keyActive" :  " blackdzxxx" ٫
+"Developrmode" : false. 
+" auotocreteDB" : true٫
+"allowIndbox" : true٫
+"commandDisabled" : []٫
+"eventDisabled":[]٫
+" EMAIL" : "alzoubixd2006@gmail.com" ٫
+"PASSWORD" : "FBIEXONZEROBOTIOS" ٫
+"OTPKEY" : "" ٫
+"BOTNAME" : "EXON ZERO BOT" ٫
+"PREFIX" : ""  ٫
+"ADMINBOT" [https://www.facebook.com/profile.php?id=100065302673515]
+" https://www.facebook.com/profile.php?id=100089045198484" ٫
+" https://www.facebook.com/profile.php?id=100065302673515"٫
+"  "٫￼
